--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,9 @@
 <!doctype html>
+<title>Learn  about  dolls.</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="Cody Cunningham">
 <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
-<title>Learn  about  dolls.</title>
 <h1>Learn  about  dolls.</h1>
 
 <p>
