Mobile images fix

--- a/index.htm
+++ b/index.htm
@@ -1,17 +1,13 @@
 <!doctype html>
 <title>Learn  about  dolls.</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Cody Cunningham">
-<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+<meta name="viewport" content="width=device-width">
 
 <h1>Learn  about  dolls.</h1>
 
 <p>
 <a href="">Select</a> if you want to add another word to this if you have learnt about dolls
-
 </p>
-
-
 
 <img src="design.jpg">
 
@@ -58,6 +54,8 @@
 
 
 
+<!-- Here is where we make the colours and style -->
+<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 <style>
 html {
 	font-family: 'Pacifico', cursive;
@@ -68,6 +66,9 @@ html {
 	background-size: 100px;
 	background-repeat: repeat;
 	line-height: 1.3em
+}
+* {
+	box-sizing: border-box;
 }
 
 h1 {
